# BLEproject

./: .gitignore  CMakeLists.txt  MOBILEAPPEXPLANATION.txt  mcuboot_image_sw_module_map.h  prj.conf
samples/bluetooth/: web_ble_test.html
samples/bluetooth/peripheral_hr/: CMakeLists.txt
samples/bluetooth/peripheral_nus/: prj.conf
samples/bluetooth/peripheral_nus/src/: main.c
samples/bluetooth/peripheral_sc_only/: NUS_INTEGRATION_COMPLETE_GUIDE.txt  NUS_INTEGRATION_EXPLANATION.txt  PROJECT_PAPER_V8_UPDATES.txt  TFM_ATTESTATION_COMPLETE_GUIDE.txt  build_log.txt  prj.conf
samples/bluetooth/peripheral_sc_only/src/: main.c  psa_attestation.c  psa_attestation.h  util_app_log.c
samples/bluetooth/simple_ble_test/: README.md  pubspec.yaml
samples/bluetooth/simple_ble_test/android/app/src/main/: AndroidManifest.xml
samples/bluetooth/simple_ble_test/lib/: main.dart
samples/tfm_integration/psa_crypto/: test.txt
samples/tfm_integration/psa_crypto/src/: main.c  psa_attestation.c  psa_crypto.c
src/: main.c  util_sformat.c  util_sformat.h
subsys/bluetooth/host/: smp.c
